--- a/GameProject_Honban/kariPracticeProject.vcxproj
+++ b/GameProject_Honban/kariPracticeProject.vcxproj
@@ -27,7 +27,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>kariPracticeProject</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>PracticeGameProject</ProjectName>
+    <ProjectName>G19011_Honban</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
